# questions-app-rust-actix

./: .gitignore  Cargo.toml  Makefile  docker-compose.test.yml  docker-compose.yml  readme.md
db/: Cargo.toml
db/migrations/2021-03-25-023505_create_questions/: up.sql
db/src/: lib.rs
db/src/models/: mod.rs  question.rs
errors/: Cargo.toml
errors/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs  tests.rs
server/src/routes/: mod.rs
server/src/routes/questions/: create.rs  get_all.rs  mod.rs
server/src/websocket/: mod.rs  server.rs
