[package]
name = "server"
version = "0.1.0"
authors = ["Aaron McLeod <aaron.g.mcleod@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.12.0"
actix-cors = "0.6.0-beta.8"
actix-http = "3.0.0-rc.1"
actix-identity = "0.4.0-beta.8"
actix-service = "2.0.2"
actix-web = "4.0.0-rc.2"
actix-web-actors = "4.0.0-beta.11"
actix-rt = "2.6"
actix-test = "0.1.0-beta.12"
awc = "3.0.0-beta.20"
db = { path = "../db" }
diesel = { version = "1.4.4", features = ["postgres", "r2d2", "uuid", "chrono"] }
dotenv = "0.9.0"
env_logger = "0.8.2"
errors = { path = "../errors" }
futures = "0.3.5"
futures-util = "0.3.5"
log = "0.4.0"
serde = "1.0.80"
serde_json = "1.0.13"
uuid = { version = "0.5", features = ["serde", "v4"] }